# leptos_verlet

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml  README.md  index.html  package-lock.json  tailwind.config.js
example/src/: app.rs  main.rs
example/src/components/: control_pane.rs  element_pane.rs  id_card.rs  info.rs  mod.rs  mouse_monitor.rs
example/style/: globals.css
leptos_verlet/: Cargo.toml
leptos_verlet/src/: aliases.rs  lib.rs
leptos_verlet/src/core/: container_bounds.rs  core.rs  mod.rs  parameters.rs  schedule.rs  setup.rs  simulation.rs  spawner.rs
leptos_verlet/src/interaction/: mod.rs  modification.rs  play_state.rs  state.rs  window_bounds.rs
leptos_verlet/src/objects/: cloth.rs  cube.rs  mod.rs  rope.rs  spawner.rs  square.rs
leptos_verlet/src/plugins/: mod.rs
leptos_verlet/src/plugins/asset_loader/: plugin.rs
leptos_verlet/src/plugins/attachment/: plugin.rs
leptos_verlet/src/plugins/info/: plugin.rs
leptos_verlet/src/plugins/modification/: mod.rs  plugin.rs  utils.rs
leptos_verlet/src/plugins/play_state/: plugin.rs
leptos_verlet/src/plugins/render/: plugin.rs
leptos_verlet/src/plugins/schedule/: plugin.rs
leptos_verlet/src/plugins/simulation/: plugin.rs
leptos_verlet/src/plugins/start_up/: plugin.rs
prelude/: Cargo.toml
prelude/src/: lib.rs
prelude/src/core/: mod.rs  parameters.rs  render.rs  schedule.rs  setup.rs  simulation.rs
prelude/src/interaction/: mod.rs  modification.rs
prelude/src/objects/: cloth.rs  rope.rs
