[workspace]
resolver = "3"
members = ["example", "leptos_verlet"]

[workspace.package]
version = "1.0.3"
edition = "2024"
rust-version = "1.85.0"
keywords = ["leptos", "bevy", "verlet", "simulation", "canvas"]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

getrandom = { version = "0.3", features = ["wasm_js"] }
bevy = { version = "0.15" }
leptos-bevy-canvas = "0.2.0"
bevy_panorbit_camera = "0.21.1"

leptos_icons = { version = "0.5" }
icondata = { version = "0.5" } # https://carloskiki.github.io/icondata/
leptos-use = { version = "0.15.7", features = [
    "use_window_size",
    "use_draggable",
] }
web-sys = { version = "0.3" }
strum = "0.26"
strum_macros = "0.26"
once_cell = "1.21.3"
rand = "0.8"
