[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos_verlet = { path = "../leptos_verlet" }

console_error_panic_hook.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

leptos-use.workspace = true
leptos_icons.workspace = true
icondata.workspace = true
web-sys.workspace = true
bevy.workspace = true
