[package]
name = "leptos_verlet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Casey Vaughn"]
license = "MIT"
repository = "https://github.com/Flan8er/leptos_verlet"
homepage = "https://github.com/Flan8er/leptos_verlet"
description = "An engine to perform Verlet simulations in Leptos apps."
readme = "../README.md"
keywords.workspace = true


[dependencies]
getrandom.workspace = true
bevy.workspace = true
leptos.workspace = true
leptos-use.workspace = true
leptos-bevy-canvas.workspace = true
bevy_panorbit_camera.workspace = true

once_cell.workspace = true
rand.workspace = true
